@@ -1,3 +1,5 @@
+TECHNICAL IMPROVEMENT: Heroku sharing command is heroku access since version 3.42.38 (2016-02-25).
+
 Heroku Rails SaaS
 
 v0.4.3
